# group-activity-recognition_v2

./: CMakeLists.txt  README.md  create_project_structure.cpp  requirements.txt
configs/: config.json  config.yaml
notebooks/: feature-extraction-resnet.ipynb  group-activity-recognition-training.ipynb
scripts/: setup_and_build.sh
src/: evaluate.py  train.py  train_stage1.cpp  train_stage2.cpp
src/data_prep/: build_dataset.py  build_sequences.cpp  build_sequences.py  extract_crops.cpp  extract_features.cpp  extract_features.py
src/models/: hierarchical_model.py
